# giftless

./: .codeclimate.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.in  dev-requirements.txt  flask-develop.sh  multipart-spec.md  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yaml  periodic.yaml  test.yaml
changelog.d/: 20241213_112045_athornton_DM_42598.md  _template.md.jinja
docs/source/: api.rst  auth-providers.md  components.rst  conf.py  configuration.md  developer-guide.md  development.md  development.rst  github-lfs.md  guides.rst  index.rst  installation.md  jwt-auth-guide.md  multipart-spec.md  quickstart.md  storage-backends.md  transfer-adapters.md  using-gcs.md  wsgi-middleware.md
examples/github-lfs/: .env  compose.yaml
giftless/: app.py  client.py  config.py  error_handling.py  exc.py  jwt.py  representation.py  schema.py  util.py  view.py  wsgi_entrypoint.py
giftless/auth/: __init__.py  allow_anon.py  github.py  github_auth.py  identity.py  jwt.py
giftless/authentication/: __init__.py  allow_anon.py  dummy.py
giftless/storage/: __init__.py  amazon_s3.py  aws_s3.py  azure.py  exc.py  google_cloud.py  local_storage.py
giftless/transfer/: __init__.py  basic_external.py  basic_streaming.py  exc.py  multipart.py  types.py
giftless/transfer/storage/: azure.py  google_cloud.py
gitlfs/server/: app.py  config.py  error_handling.py  exc.py  jwt.py  representation.py  schema.py  util.py  uwsgi_entrypoint.py  view.py  wsgi_entrypoint.py
gitlfs/server/transfer/: __init__.py  basic_local.py  basic_streaming.py
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: docker-entrypoint-dockerhub.sh  docker-entrypoint.sh  docker-prerun.sh  docker-tag.sh
tests/: conftest.py  helpers.py  test_batch_api.py  test_error_responses.py  test_middleware.py  test_schema.py
tests/auth/: test_auth.py  test_github.py  test_jwt.py
tests/auth/data/: test-key.pem  test-key.pub.pem
tests/mocks/: google_cloud_storage.py
tests/storage/: __init__.py  test_amazon_s3.py  test_aws_s3.py  test_azure.py  test_google_cloud.py  test_local.py
tests/storage/cassettes/: TestAmazonS3StorageBackend.test_exists_exists.yaml  TestAmazonS3StorageBackend.test_exists_not_exists.yaml  TestAmazonS3StorageBackend.test_get_download_action.yaml  TestAmazonS3StorageBackend.test_get_raises_if_not_found.yaml  TestAmazonS3StorageBackend.test_get_size.yaml  TestAmazonS3StorageBackend.test_get_size_not_existing.yaml  TestAmazonS3StorageBackend.test_get_upload_action.yaml  TestAmazonS3StorageBackend.test_put_get_object.yaml  TestAmazonS3StorageBackend.test_verify_object_not_there.yaml  TestAmazonS3StorageBackend.test_verify_object_ok.yaml  TestAmazonS3StorageBackend.test_verify_object_wrong_size.yaml  TestAwsS3StorageBackend.test_exists_exists.yaml  TestAwsS3StorageBackend.test_exists_not_exists.yaml  TestAwsS3StorageBackend.test_get_download_action.yaml  TestAwsS3StorageBackend.test_get_raises_if_not_found.yaml  TestAwsS3StorageBackend.test_get_size.yaml  TestAwsS3StorageBackend.test_get_size_not_existing.yaml  TestAwsS3StorageBackend.test_get_upload_action.yaml  TestAwsS3StorageBackend.test_put_get_object.yaml  TestAwsS3StorageBackend.test_verify_object_not_there.yaml  TestAwsS3StorageBackend.test_verify_object_ok.yaml  TestAwsS3StorageBackend.test_verify_object_wrong_size.yaml  TestAzureBlobStorageBackend.test_exists_exists.yaml  TestAzureBlobStorageBackend.test_exists_not_exists.yaml  TestAzureBlobStorageBackend.test_get_download_action.yaml  TestAzureBlobStorageBackend.test_get_raises_if_not_found.yaml  TestAzureBlobStorageBackend.test_get_size.yaml  TestAzureBlobStorageBackend.test_get_size_not_existing.yaml  TestAzureBlobStorageBackend.test_get_upload_action.yaml  TestAzureBlobStorageBackend.test_put_get_object.yaml  TestAzureBlobStorageBackend.test_verify_object_not_there.yaml  TestAzureBlobStorageBackend.test_verify_object_ok.yaml  TestAzureBlobStorageBackend.test_verify_object_wrong_size.yaml  TestGoogleCloudStorageBackend.test_exists_exists.yaml  TestGoogleCloudStorageBackend.test_exists_not_exists.yaml  TestGoogleCloudStorageBackend.test_get_download_action.yaml  TestGoogleCloudStorageBackend.test_get_raises_if_not_found.yaml  TestGoogleCloudStorageBackend.test_get_size.yaml  TestGoogleCloudStorageBackend.test_get_size_not_existing.yaml  TestGoogleCloudStorageBackend.test_get_upload_action.yaml  (+4 more)
tests/transfer/: conftest.py  test_basic_external_adapter.py  test_module.py
tests/transfer/storage/: test_google_cloud.py
tests/transfer/storage/data/: test.csv
